--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -15,7 +15,7 @@ spring:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
   datasource:
     url: jdbc:h2:mem:db
     driver-class-name: org.h2.Driver
